--- a/ui/src/app/shared/components/appointments-table/appointments-table.component.html
+++ b/ui/src/app/shared/components/appointments-table/appointments-table.component.html
@@ -6,11 +6,16 @@
                 {{ element.position }}
             </td>
         </ng-container>
-
-        <ng-container matColumnDef="names">
+        <ng-container matColumnDef="patietId">
+            <th mat-header-cell *matHeaderCellDef>Patient ID</th>
+            <td mat-cell *matCellDef="let element">
+                {{ element.patietId }}
+            </td>
+        </ng-container>
+        <ng-container matColumnDef="patientName">
             <th mat-header-cell *matHeaderCellDef>Patient Names</th>
             <td mat-cell *matCellDef="let element">
-                {{ element.names }}
+                {{ element.patientName }}
             </td>
         </ng-container>
 
@@ -20,23 +25,35 @@
                 {{ element.location }}
             </td>
         </ng-container>
-        <ng-container matColumnDef="gender">
-            <th mat-header-cell *matHeaderCellDef>Service Appointment Type</th>
+        <ng-container matColumnDef="appointmentType">
+            <th mat-header-cell *matHeaderCellDef>Appointment Type</th>
             <td mat-cell *matCellDef="let element">
-                {{ element.gender }}
+                {{ element.appointmentType }}
             </td>
         </ng-container>
-        <ng-container matColumnDef="age">
+        <ng-container matColumnDef="provider">
             <th mat-header-cell *matHeaderCellDef>Provider</th>
             <td mat-cell *matCellDef="let element">
-                {{ element.age }} ({{ element?.birthdate }})
+                {{ element.provider }}
             </td>
         </ng-container>
         
-        <ng-container matColumnDef="startDatetime">
-            <th mat-header-cell *matHeaderCellDef>Appointment date & Time</th>
+        <ng-container matColumnDef="date">
+            <th mat-header-cell *matHeaderCellDef>Appointment date</th>
             <td mat-cell *matCellDef="let element">
-                {{ element.startDatetime | date: "medium" }}
+                {{ element.startTime | date: "mediumDate" }} 
+            </td>
+        </ng-container>
+        <ng-container matColumnDef="time">
+            <th mat-header-cell *matHeaderCellDef>Appointment time</th>
+            <td mat-cell *matCellDef="let element">
+                {{ element.startTime | date: "shortTime" }} - {{ element.endTime | date: "shortTime" }}
+            </td>
+        </ng-container>
+        <ng-container matColumnDef="status">
+            <th mat-header-cell *matHeaderCellDef>Status</th>
+            <td mat-cell *matCellDef="let element">
+                {{ element.status}}
             </td>
         </ng-container>
 
