--- a/ui/src/app/shared/dialogs/appointment-form/appointment-form.component.html
+++ b/ui/src/app/shared/dialogs/appointment-form/appointment-form.component.html
@@ -1,4 +1,4 @@
-<div>
+<div style="position: relative;">
     <mat-toolbar color="primary">Add new appointment</mat-toolbar>
     <div class="loading-overlay" *ngIf="saving">
         <div class="text-center">
@@ -10,13 +10,64 @@
     </div>
     <div style="margin-inline: 4px; margin-bottom: 4px;">
         <div>
-            <app-form [fields]="appointmentFormFields" [isReport]="false" (formUpdate)="formUpdates($event)"></app-form>
+                <div [formGroup]="appointmentForm">
+                        <div class="d-flex mt-1">
+                            <mat-form-field class="flex-grow-1" appearance="fill">
+                                <mat-label>Patient</mat-label>
+                                <mat-select formControlName="patient" disabled="true">
+                                    <mat-option [value]="data.patient.patient.uuid" selected="selected">{{data.patient.patient.display}}</mat-option>
+                                </mat-select>
+                            </mat-form-field>
+                        </div>
+                       
+                        <div class="d-flex mt-1">
+                            <mat-form-field class="flex-grow-1" appearance="fill">
+                                <mat-label>Service</mat-label>
+                                <mat-select formControlName="service" disabled="true">
+                                    <mat-option [value]="data.location.uuid" selected="selected">{{data.location.display}}</mat-option>
+                                </mat-select>
+                            </mat-form-field>
+                        </div>
+                        <div class="d-flex mt-1">
+                            <mat-form-field class="flex-grow-1" appearance="fill">
+                                <mat-label>Location</mat-label>
+                                <mat-select formControlName="location" disabled="true">
+                                    <mat-option [value]="data.location.parentLocation.uuid"
+                                        selected="selected">{{data.location.parentLocation.display}}</mat-option>
+                                </mat-select>
+                            </mat-form-field>
+                        </div>
+                        <app-form [fields]="appointmentFormFields" [isReport]="false" (formUpdate)="formUpdates($event)"></app-form>
+                        <div class="d-flex mt-1">
+                            <mat-form-field class="flex-grow-1" appearance="fill">
+                                <mat-label>Start Time</mat-label>
+                                <mat-select formControlName="startTime" (selectionChange)="handleStartTimeChange($event)">
+                                    <mat-option [value]="time" *ngFor="let time of timeRange">{{getTimeFromDateString(time.startTime)}}</mat-option>
+                                </mat-select>
+                            </mat-form-field>
+                        </div>
+                        <div class="d-flex mt-1">
+                            <mat-form-field class="flex-grow-1" appearance="fill">
+                                <mat-label>End Time</mat-label>
+                                <mat-select formControlName="endTime">
+                                    <mat-option [value]="time.endTime" *ngFor="let time of timeRange">{{getTimeFromDateString(time.endTime)}}</mat-option>
+                                </mat-select>
+                            </mat-form-field>
+                        </div>
+                        <div class="mt-2">
+                            <mat-form-field class="w-100" appearance="fill">
+                                <mat-label>Notes</mat-label>
+                                <textarea matInput rows="5" id="notes" formControlName="notes" placeholder="Notes"></textarea>
+                            </mat-form-field>
+                        </div>
+                    </div>
+
+                </div>
         </div>
-        <div class="d-flex justify-content-end my-2">
+        <div class="d-flex justify-content-end m-4">
             <button mat-stroked-button (click)="onClose($event)">Close</button>
             <button mat-flat-button color="primary" class="ml-2" (click)="onSave($event)">
                 Save
             </button>
         </div>
     </div>
-</div>
