--- a/ui/src/app/modules/registration/pages/registration-home/registration-home.component.html
+++ b/ui/src/app/modules/registration/pages/registration-home/registration-home.component.html
@@ -45,7 +45,7 @@
             <button mat-stroked-button id="RegistrationBtn" color="primary" class="mr-4"
               (click)="goToAddNewClientPage($event, '/registration/appointments')">
               <mat-icon inline>list</mat-icon>
-              <span class="ml-2">Appointments List</span>
+              <span class="ml-2">Reminder List</span>
             </button>
 
             <button
