--- a/ui/src/app/shared/components/shared-patient-dashboard/shared-patient-dashboard.component.html
+++ b/ui/src/app/shared/components/shared-patient-dashboard/shared-patient-dashboard.component.html
@@ -110,7 +110,7 @@
               mat-stroked-button
               color="primary"
             >
-              New Appointment
+              Schedule Reminder.
             </button>
             <button
               *ngIf="!isInpatient"
