--- a/ui/src/app/modules/registration/components/appointments/appointments.component.html
+++ b/ui/src/app/modules/registration/components/appointments/appointments.component.html
@@ -14,7 +14,7 @@
               params?.userPrivileges &&
               params?.activeVisit &&
               !params?.loadingVisit &&
-              params?.iCareGeneralConfigurations &&
+              paramsSchedules?.iCareGeneralConfigurations &&
               params?.iCareGeneralConfigurations !== '' &&
               params?.currentLocation
             " [currentUser]="params?.currentUser" [activeVisit]="params?.activeVisit"
