--- a/ui/src/app/modules/dashboard/dashboard.component.html
+++ b/ui/src/app/modules/dashboard/dashboard.component.html
@@ -1,13 +1,14 @@
-<h1>Healthcare Dashboard </h1>
-<div>
-  <highcharts-chart
-  [Highcharts]="Highcharts"
-  [options]="Barchart"
-  style="width: 100%; height: 400px; display: block;"
->
-</highcharts-chart>
+ <div class="w-100" id="container">
+  <div id="linechart-container"></div>
+<div id="barchart-container"></div>
+<div id="spline"></div>
+<div id="highcharts"></div>
+   
 </div>
- 
+<div>
+  <a *ngFor="let dashboard of dashboards$ | async" [routerlink]="['/dashboard/', dashboard.id]">{{dashboard.name}}</a>
+</div>
+<router-outlet></router-outlet>
 
 
 
