--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -313,6 +313,6 @@ mat-dialog-container {
     0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
 }
 
-.patient-other-details-padding {
-  padding-top: 7rem !important;
-}
+//.patient-other-details-padding {
+ // padding-top: 7rem !important;
+//}
