--- a/ui/src/app/shared/components/modules-selector/modules-selector.component.scss
+++ b/ui/src/app/shared/components/modules-selector/modules-selector.component.scss
@@ -78,3 +78,16 @@
 ::-webkit-scrollbar {
   height: 0;
 }
+
+//.chip-list-container {
+//  width: 200px;
+//  position: relative;
+//}
+//
+//.more-chips-button {
+//  position: absolute;
+//  right: 0;//
+//  top: 0;
+//  margin-top: -4px;
+//  margin-right: -4px;
+//}
