--- a/ui/src/app/shared/components/new-patient-profile/new-patient-profile.component.scss
+++ b/ui/src/app/shared/components/new-patient-profile/new-patient-profile.component.scss
@@ -1,6 +1,5 @@
 .patient-profile-container {
   background-color: #f5f5f5;
-  padding: 5px;
 }
 
 .patient-prifile-header {
@@ -36,4 +35,11 @@
 }
 .item {
   height: calc(100%3);
+}
+.mat-expansion-panel-header-title{
+  display: initial;
+}
+
+.mat-icon{
+  order: 0;
 }
