--- a/ui/src/app/shared/dialogs/appointment-form/appointment-form.component.html
+++ b/ui/src/app/shared/dialogs/appointment-form/appointment-form.component.html
@@ -8,7 +8,10 @@
             </div>
         </div>
     </div>
+    
     <div style="margin-inline: 4px; margin-bottom: 4px;">
+        
+          
         <div style="max-height: 80vh; overflow-y: auto;">
                 <div [formGroup]="appointmentForm">
                         <div class="d-flex mt-1">
@@ -40,7 +43,24 @@
 
                         <div class="d-flex mt-1">
                             <mat-form-field class="flex-grow-1" appearance="fill">
-                                <mat-label>Date</mat-label>
+                                <mat-label>Appointment Type</mat-label>
+                                <mat-select formControlName="appointmentType">
+                                    <mat-option value="information">Information</mat-option>
+                                    <mat-option value="appointments">Appointments</mat-option>
+                                </mat-select>
+                            </mat-form-field>
+                        </div>
+                        
+                        <div class="d-flex mt-1">
+                            <mat-form-field class="flex-grow-1" appearance="fill">
+                                <mat-label>Phone Number</mat-label>
+                                <input matInput formControlName="phoneNumber">
+                            </mat-form-field>
+                        </div>
+
+                        <div class="d-flex mt-1">
+                            <mat-form-field class="flex-grow-1" appearance="fill">
+                                <mat-label>Scheduled Send Date</mat-label>
                                 <input matInput [matDatepicker]="picker" formControlName="scheduledSendTime">
                                 <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
                                 <mat-datepicker #picker></mat-datepicker>
@@ -48,30 +68,7 @@
                             </mat-form-field>
                         </div>
 
-
-
-                        <div class="d-flex mt-1">
-                            <mat-form-field class="flex-grow-1" appearance="fill">
-                                <mat-label>Phone Number</mat-label>
-                                <input matInput formControlName="phoneNumber">
-                            </mat-form-field>
-                        </div>
-                        <!-- <div class="d-flex mt-1">
-                            <mat-form-field class="flex-grow-1" appearance="fill">
-                                <mat-label>Start Time</mat-label>
-                                <mat-select formControlName="startTime" (selectionChange)="handleStartTimeChange($event)">
-                                    <mat-option [value]="time" *ngFor="let time of timeRange">{{getTimeFromDateString(time.startTime)}}</mat-option>
-                                </mat-select>
-                            </mat-form-field>
-                        </div> -->
-                        <!-- <div class="d-flex mt-1">
-                            <mat-form-field class="flex-grow-1" appearance="fill">
-                                <mat-label>End Time</mat-label>
-                                <mat-select formControlName="endTime">
-                                    <mat-option [value]="time.endTime" *ngFor="let time of timeRange">{{getTimeFromDateString(time.endTime)}}</mat-option>
-                                </mat-select>
-                            </mat-form-field>
-                        </div> -->
+                   
                         <div class="mt-2">
                             <mat-form-field class="w-100" appearance="fill">
                                 <mat-label>Write SMS.</mat-label>
@@ -79,13 +76,53 @@
                             </mat-form-field>
                         </div>
                     </div>
+                    <div *ngIf="showSMSForm">
+                        <form [formGroup]="smsForm" (submit)="addNewSMS()">
+                            <div class="d-flex mt-1">
+                                <mat-form-field class="flex-grow-1" appearance="fill">
+                                    <mat-label>Appointment Type</mat-label>
+                                    <mat-select formControlName="appointmentType">
+                                        <mat-option value="information">Information</mat-option>
+                                        <mat-option value="appointments">Appointments</mat-option>
+                                    </mat-select>
+                                </mat-form-field>
+                            </div>
+                            <div class="d-flex mt-1">
+                                <mat-form-field clas="flex-grow-1" appearance="fill">
+                                    <mat-label>Scheduled Send Date</mat-label>
+                                    <input matInput [matDatepicker]="picker" formControlName="scheduledSendDate">
+                                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                                    <mat-datepicker #picker></mat-datepicker>
+                                </mat-form-field>
+                            </div>
+    
+                            <div class="mt-2">
+                                <mat-form-field class="w-100" appearance="fill">
+                                    <mat-label>Write SMS.</mat-label>
+                                    <textarea matInput rows="5" id="message" formControlName="message" placeholder="message"></textarea>
+                                </mat-form-field>
+                            </div>
+                        </form>
+                    </div>
 
                 </div>
+                
+
+                
+
         </div>
         <div class="d-flex justify-content-end m-4">
             <button mat-stroked-button (click)="onClose($event)">Close</button>
             <button mat-flat-button color="primary" class="ml-2" (click)="onSave($event)">
                 Save
             </button>
+            <button mat-stroked-button (click)= "showAddSMSForm()" color="secondary" class="ml-2">
+                <mat-icon>add</mat-icon>
+                Add new Sms
+            </button>
+            
         </div>
-    </div>
+        
+        
+
+  
