--- a/ui/src/app/modules/registration/pages/appointments-list/appointments-list.component.html
+++ b/ui/src/app/modules/registration/pages/appointments-list/appointments-list.component.html
@@ -1,27 +1,77 @@
 <div>
-    <mat-toolbar>
-        <button mat-icon-button (click)="onBack($event)" matTooltip="Go to Home page">
-            <mat-icon>arrow_back</mat-icon>
-        </button>
-        <span class="ml-2">Messages Schedules </span>
-    </mat-toolbar>
-    <table>
-        <thead>
-          <tr>
-            <th>Patient Name</th>
-            <th>Scheduled Send Time</th>
-            <th>Message</th>
-            <th>Phone Number</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let schedule of schedules">
-            <td>{{ schedule.mother }}</td>
-            <td>{{ schedule.scheduledSendTime }}</td>
-            <td>{{ schedule.message }}</td>
-            <td>{{ schedule.phoneNumber }}</td>
-          </tr>
-        </tbody>
-      </table>
-      
+  <mat-toolbar>
+      <button mat-icon-button (click)="onBack($event)" matTooltip="Go to Home page">
+          <mat-icon>arrow_back</mat-icon>
+      </button>
+      <span class="ml-2">Messages Schedules</span>
+  </mat-toolbar>
+
+  <mat-form-field>
+      <mat-label>Search by scheduled date</mat-label>
+      <input matInput [matDatepicker]="picker" [(ngModel)]="searchTerm" (ngModelChange)="applyFilter()">
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+  </mat-form-field>
+
+  <table mat-table [dataSource]="filtered" class="mat-elevation-z8" style="width: 100%;">
+
+      <!--- Note that these columns can be defined in any order.
+          The actual rendered columns are set as a property on the row definition" -->
+
+      <!-- Position Column -->
+      <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef> Patient Name </th>
+          <td mat-cell *matCellDef="let element"> {{element.mother}} </td>
+      </ng-container>
+
+      <!-- Name Column -->
+      <ng-container matColumnDef="date">
+          <th mat-header-cell *matHeaderCellDef> Scheduled Send Time </th>
+          <td mat-cell *matCellDef="let element"> {{element.scheduledSendTime}} </td>
+      </ng-container>
+
+      <!-- Weight Column -->
+      <ng-container matColumnDef="message">
+          <th mat-header-cell *matHeaderCellDef> Message </th>
+          <td mat-cell *matCellDef="let element"> {{element.message}} </td>
+      </ng-container>
+
+      <!-- Symbol Column -->
+      <ng-container matColumnDef="phoneNumber">
+          <th mat-header-cell *matHeaderCellDef> Phone Number </th>
+          <td mat-cell *matCellDef="let element"> {{element.phoneNumber}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="status">
+          <th mat-header-cell *matHeaderCellDef> Status </th>
+          <td mat-cell *matCellDef="let element">
+              <strong *ngIf="element.sentAt !== null; else notSent">Sent</strong>
+              <ng-template #notSent>
+                  <strong>Not Sent</strong>
+              </ng-template>
+          </td>
+      </ng-container>
+
+      <ng-container matColumnDef="appointmentType">
+          <th mat-header-cell *matHeaderCellDef> Type </th>
+          <td mat-cell *matCellDef="let element">
+              {{element.appointmentType}}
+          </td>
+      </ng-container>
+
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef> Actions </th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-icon-button color="primary" (click)="openEditDialog(element)">
+            <mat-icon>edit</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+
+  <mat-paginator [length]="100" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page"></mat-paginator>
 </div>
