--- a/ui/src/app/modules/dashboard/dashboard.component.html
+++ b/ui/src/app/modules/dashboard/dashboard.component.html
@@ -46,7 +46,7 @@
       <mat-card-subtitle class="mb-3 h5 text-center">
         Outbed Patients
       </mat-card-subtitle>
-      <mat-card-title _ngcontent-cmr-c529="" class="mat-card-title h2 text-center">0</mat-card-title>
+      <mat-card-title _ngcontent-cmr-c529="" class="mat-card-title h2 text-center">404</mat-card-title>
       <mat-card-title class="h2 text-center"></mat-card-title>
     </mat-card>
   </div>
@@ -55,7 +55,7 @@
       <mat-card-subtitle class="mb-3 h5 text-center">
         Available Staff
       </mat-card-subtitle>
-      <mat-card-title _ngcontent-cmr-c529="" class="mat-card-title h2 text-center">0</mat-card-title>
+      <mat-card-title _ngcontent-cmr-c529="" class="mat-card-title h2 text-center">52</mat-card-title>
       <mat-card-title class="h2 text-center"></mat-card-title>
     </mat-card>
   </div>
@@ -64,7 +64,7 @@
       <mat-card-subtitle class="mb-3 h5 text-center">
         Average ER Waiting Time
       </mat-card-subtitle>
-      <mat-card-title _ngcontent-cmr-c529="" class="mat-card-title h2 text-center">0</mat-card-title>
+      <mat-card-title _ngcontent-cmr-c529="" class="mat-card-title h2 text-center">1h 10min</mat-card-title>
       <mat-card-title class="h2 text-center"></mat-card-title>
     </mat-card>
   </div>
@@ -73,7 +73,7 @@
       <mat-card-subtitle class="mb-3 h5 text-center">
         Inbed Patients
       </mat-card-subtitle>
-      <mat-card-title _ngcontent-cmr-c529="" class="mat-card-title h2 text-center">0</mat-card-title>
+      <mat-card-title _ngcontent-cmr-c529="" class="mat-card-title h2 text-center">25</mat-card-title>
       <mat-card-title class="h2 text-center"></mat-card-title>
     </mat-card>
   </div>
