--- a/ui/src/app/shared/dialogs/dispension-form/dispension-form.component.html
+++ b/ui/src/app/shared/dialogs/dispension-form/dispension-form.component.html
@@ -33,7 +33,7 @@
     </div>
   </div>
   <mat-toolbar color="primary">
-    <span>Patient's Drug Prescription </span
+    <span>Patient's Drug Prescription and Equipments </span
     ><span *ngIf="data?.patient?.display"> - {{ data?.patient?.display }}</span>
     <span class="toolbar-spacer"></span>
     <button mat-icon-button mat-dialog-close matTooltip="close">
@@ -96,6 +96,10 @@
               "
               mode="indeterminate"
             ></mat-progress-bar>
+            <mat-tab-group animationDuration="0ms">
+               <mat-tab label="Drugs"></mat-tab>
+              <mat-tab label="Equipments"></mat-tab>
+            </mat-tab-group>
           </div>
           <div
             class="col-6"
@@ -181,6 +185,7 @@
               data?.fromDispensing
             "
           >
+          <mat-button-toggle></mat-button-toggle>
             <div
               class="p-2"
               *ngIf="
