--- a/ui/src/app/shared/components/appointments-table/appointments-table.component.html
+++ b/ui/src/app/shared/components/appointments-table/appointments-table.component.html
@@ -6,26 +6,26 @@
                 {{ element.position }}
             </td>
         </ng-container>
-        <ng-container matColumnDef="patietId">
+        <!-- <ng-container matColumnDef="patietId">
             <th mat-header-cell *matHeaderCellDef>Patient ID</th>
             <td mat-cell *matCellDef="let element">
                 {{ element.patietId }}
             </td>
-        </ng-container>
-        <ng-container matColumnDef="patientName">
+        </ng-container> -->
+        <!-- <ng-container matColumnDef="patientName">
             <th mat-header-cell *matHeaderCellDef>Patient Names</th>
             <td mat-cell *matCellDef="let element">
                 {{ element.patientName }}
             </td>
-        </ng-container>
+        </ng-container> -->
 
-        <ng-container matColumnDef="location">
+        <!-- <ng-container matColumnDef="location">
             <th mat-header-cell *matHeaderCellDef>Doctor's Room / Ward</th>
             <td mat-cell *matCellDef="let element">
                 {{ element.location }}
             </td>
-        </ng-container>
-        <ng-container matColumnDef="appointmentType">
+        </ng-container> -->
+        <!-- <ng-container matColumnDef="appointmentType">
             <th mat-header-cell *matHeaderCellDef>Appointment Type</th>
             <td mat-cell *matCellDef="let element">
                 {{ element.appointmentType }}
@@ -36,9 +36,9 @@
             <td mat-cell *matCellDef="let element">
                 {{ element.provider }}
             </td>
-        </ng-container>
+        </ng-container> -->
         
-        <ng-container matColumnDef="date">
+        <!-- <ng-container matColumnDef="date">
             <th mat-header-cell *matHeaderCellDef>Appointment date</th>
             <td mat-cell *matCellDef="let element">
                 {{ element.startTime | date: "mediumDate" }} 
@@ -49,13 +49,13 @@
             <td mat-cell *matCellDef="let element">
                 {{ element.startTime | date: "shortTime" }} - {{ element.endTime | date: "shortTime" }}
             </td>
-        </ng-container>
-        <ng-container matColumnDef="status">
+        </ng-container> -->
+        <!-- <ng-container matColumnDef="status">
             <th mat-header-cell *matHeaderCellDef>Status</th>
             <td mat-cell *matCellDef="let element">
                 {{ element.status}}
             </td>
-        </ng-container>
+        </ng-container> -->
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr style="cursor: pointer" class="{{ row?.paymentType === 'Insurance' ? 'insured-client' : '' }}" mat-row
