--- a/ui/src/app/modules/registration/pages/appointments-list/appointments-list.component.html
+++ b/ui/src/app/modules/registration/pages/appointments-list/appointments-list.component.html
@@ -31,16 +31,16 @@
       </ng-container>
 
       <!-- Weight Column -->
-      <ng-container matColumnDef="message">
-          <th mat-header-cell *matHeaderCellDef> Message </th>
+      <ng-container matColumnDef="message" style="margin-right: 10px;">
+          <th mat-header-cell *matHeaderCellDef> Message</th>
           <td mat-cell *matCellDef="let element"> {{element.message}} </td>
       </ng-container>
 
       <!-- Symbol Column -->
-      <ng-container matColumnDef="phoneNumber">
+      <!-- <ng-container matColumnDef="phoneNumber" style="margin-right: 10px;">
           <th mat-header-cell *matHeaderCellDef> Phone Number </th>
           <td mat-cell *matCellDef="let element"> {{element.phoneNumber}} </td>
-      </ng-container>
+      </ng-container> -->
 
       <ng-container matColumnDef="status">
           <th mat-header-cell *matHeaderCellDef> Status </th>
