feat: Add update appointment status

--- a/ui/src/app/modules/registration/pages/appointments-list/appointments-list.component.html
+++ b/ui/src/app/modules/registration/pages/appointments-list/appointments-list.component.html
@@ -8,7 +8,7 @@
     <div class="w-100 text-centered">
         <app-appointments-list-table 
             [encounterType]="'e22e39fd-7db2-45e7-80f1-60fa0d5a4378'"
-            (selectPatient)="onSelectPatient($event)"
+            (selectPatient)="onSelectAppointment($event)"
             [shouldShowParentLocation]="true"
             [isTabularList]="true">
         </app-appointments-list-table>
