--- a/ui/src/app/shared/components/appointments-table/appointments-table.component.html
+++ b/ui/src/app/shared/components/appointments-table/appointments-table.component.html
@@ -66,13 +66,13 @@
     [pageSizeOptions]="[10, 15, 20, 25, 50, 100]"
     showFirstLastButtons
   ></mat-paginator> -->
-    <div class="d-flex justify-content-end mt-2 mb-2" *ngIf="visits && visits.length > 0">
+    <div class="d-flex justify-content-end mt-2 mb-2" *ngIf="appointments && appointments.length > 0">
         <button [disabled]="page === 0" mat-stroked-button
-            (click)="getAnotherList($event, visits ? visits[0] : null, 'prev')">
+            (click)="getAnotherList($event, appointments ? appointments[0] : null, 'prev')">
             Prev
         </button>
-        <button [disabled]="(visits && visits[0].visit && !visits[0].visit?.pager) && itemsPerPage > visits.length"
-            class="ml-2" mat-stroked-button (click)="getAnotherList($event, visits ? visits[0] : null, 'next')">
+        <button [disabled]="appointments && itemsPerPage > appointments.length" class="ml-2" mat-stroked-button
+            (click)="getAnotherList($event, appointments ? appointments[0] : null, 'next')">
             Next
         </button>
     </div>
